--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,14 +10,30 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args": ["-m",
-                "/home/luvision/project/Code/data/Aurora/Fig_3/20240914_phone2/concave_recon/pgsr_depth_normal",
-                "--max_depth",
-                "60.0", 
-                "--voxel_size",
-                "0.025", 
-                "--iteration",
-                "50001"]   
+            "args": ["-s",
+                "/home/luvision/project/Code/data/Aurora/Fig_3/20240914_phone2/concave_recon_smooth/colmap",
+                "-m",
+                "/home/luvision/project/Code/data/Aurora/Fig_3/20240914_phone2/concave_recon_smooth/pgsr_depth_normal",
+                "--max_abs_split_points",
+                "0", 
+                "--opacity_cull_threshold",
+                "0.1", 
+                "--lambda_l1_depth",
+                "0.01",
+                "--normal_weight",
+                "0.01",
+                "--single_view_weight",
+                "0.1",
+                "--multi_view_weight_from_iter",
+                "8000",
+                "--iterations",
+                "8000",
+                "--multi_view_ncc_weight",
+                "0",
+                "--multi_view_geo_weight",
+                "0.1",
+                "--normal_scale",
+                "1.0"]   
         }
     ]
 }
